feat: make schema export side-effect free
Add JSON Schema metadata to schema providers, preserve deterministic row generation during schema/Jackson serialization, and harden docs CI plus testing/safety documentation.